Add GitHub repo link to text section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,8 @@
 					Each of them have their own stories, relating to different memories and activities that I enjoyed.
 					<br><br>
 					This website would have showcased those items, but for lack of time and privacy reasons, I have decided to scrap this project.
+					<br><br>
+					<a href="https://github.com/aldnwong/bocks" style="text-decoration: underline; color: #978bff">View the GitHub repo here.</a>
 				</p>
 			</div>
 			<div class="spacer" style="height:100vh; width: 100%" />
