--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@
 
 		<link rel="stylesheet" href="css/cssReset.css">
 		<link rel="stylesheet" href="css/mainTheme.css">
+		<link rel="stylesheet" href="css/keyframes.css">
+		<link rel="stylesheet" href="css/fonts.css">
 
 		<link rel="preload" href="fonts/ComicSans.ttf" as="font" type="font/tff" crossorigin>
 		<link rel="preload" href="fonts/Consolas.ttf" as="font" type="font/tff" crossorigin>
@@ -29,8 +31,8 @@
 			<img id="bocksImg" src="photos/frame-1.png" draggable="false">
 			<img id="arrowImg" src="photos/arrowDown.png" draggable="false">
 		</div>
-		<div class="about mainContain">
-			<div class="spacer" style="height:20vh; width: 100%" />
+		<div class="about mainContain" style="">
+			<div class="spacer" style="height:40vh;" />
 			<div class="aboutBocks" id="abDiv">
 				<h1 class="title" id="abTitle">What is it?</h1>
 				<p class="text" id="abText">
@@ -42,7 +44,7 @@
 					<a href="https://github.com/aldnwong/bocks" style="text-decoration: underline; color: #978bff">View the GitHub repo here.</a>
 				</p>
 			</div>
-			<div class="spacer" style="height:100vh; width: 100%" />
+			<div class="spacer" style="height:70vh;" />
 		</div>
 	</body>
 </html>
