--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,29 +10,28 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>bocks | aldenw.ong</title>
 
+		<link rel="preload" href="fonts/ComicSans.ttf" as="font" type="font/tff" crossorigin>
+		<link rel="preload" href="fonts/Consolas.ttf" as="font" type="font/tff" crossorigin>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900">
+
 		<link rel="stylesheet" href="css/cssReset.css">
 		<link rel="stylesheet" href="css/mainTheme.css">
 		<link rel="stylesheet" href="css/keyframes.css">
 		<link rel="stylesheet" href="css/fonts.css">
 
-		<link rel="preload" href="fonts/ComicSans.ttf" as="font" type="font/tff" crossorigin>
-		<link rel="preload" href="fonts/Consolas.ttf" as="font" type="font/tff" crossorigin>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900">
-
 		<script src="../scripts/preloadImages.js" />
 		<script src="../scripts/scrollAnimations.js" />
+		<script src="../scripts/titleAnimation.js" />
 	</head>
 	<body>
 		<div class="start">
 			<h1 class="title" id="fptTitle">senior box</h1>
-			<script src="../scripts/titleAnimation.js" />
 		</div>
-		<div class="bocks">
+		<div class="bocks" id="bocksScroll">
 			<img id="bocksImg" src="photos/frame-1.png" draggable="false">
 			<img id="arrowImg" src="photos/arrowDown.png" draggable="false">
 		</div>
 		<div class="about mainContain" style="">
-			<div class="spacer" style="height:40vh;" />
 			<div class="aboutBocks" id="abDiv">
 				<h1 class="title" id="abTitle">What is it?</h1>
 				<p class="text" id="abText">
@@ -44,7 +43,7 @@
 					<a href="https://github.com/aldnwong/bocks" style="text-decoration: underline; color: #978bff">View the GitHub repo here.</a>
 				</p>
 			</div>
-			<div class="spacer" style="height:70vh;" />
+			<div class="spacer" style="height:700vh;" />
 		</div>
 	</body>
 </html>
