--- a/public/css/mobileTheme.css
+++ b/public/css/mobileTheme.css
@@ -1,16 +1,11 @@
 @media only screen and (max-width: 700px) {
     #title {
         font-size: 10vw;
-        font-weight: 700;
-        padding-top: 35vh;
     }
 
     #bocksImg {
-        top: -10vh;
         left: -50vw;
         width: 200vw;
-        height: 90vh;
-        object-fit: contain;
     }
 
     .about {
@@ -19,12 +14,12 @@
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 3em;
             font-weight: 700;
         }
     
         p {
-            font-size: 1.5rem;
+            font-size: 1.5em;
             font-weight: 300;
         }
     }
