--- a/public/css/mainTheme.css
+++ b/public/css/mainTheme.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: ComicSans;
+    src: url("../fonts/ComicSans.ttf");
+}
+
+@font-face {
+    font-family: Consolas;
+    src: url("../fonts/Consolas.ttf");
+}
+
 #title {
     font-size: 5em;
     font-weight: 700;
@@ -6,14 +16,14 @@
     width: 100%;
     padding-top: 35vh;
     text-align: center;
-    color: var(--titleColor);
+    color: #978bff;
 }
 
 #highlighted {
     font-family: 'ComicSans';
     font-size: 1.1em;
     font-weight: 700;
-    color: var(--titleSecondaryColor);
+    color: #998FC3;
     line-height: 0.8;
 }
 
@@ -39,7 +49,7 @@
 
 .about {
     opacity: 0;
-    transition: 0.15s;
+    transition: 0.1s;
 
     div {
         width: 80%;
@@ -47,10 +57,8 @@
     }
 
     h1, p, a {
-        color: var(--titleColor);
+        color: #978bff;
         font-family: 'Poppins';
-        height: 100%;
-        width: 100%;
     }
 
     h1 {
@@ -69,11 +77,7 @@
 }
 
 html {
-    -ms-overflow-style: none; 
+    background-color: rgb(24, 19, 75);
     scrollbar-width: none;  
     scroll-behavior: smooth;
-}
-
-html::-webkit-scrollbar { 
-    display: none; 
 }
